add spotify official library, made playlist request

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@spotify/web-api-ts-sdk": "^1.2.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "spotify-web-api-node": "^5.0.2"
+    "express": "^4.18.3"
   }
 }
