--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "tampulan",
   "version": "1.0.0",
   "description": "api for focus and study music on constant rotation",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +12,11 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.25",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   }
 }
