--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "winston": "^3.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
