--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.25",
+    "cors": "^2.8.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
