--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "api for focus and study music on constant rotation",
   "scripts": {
-    "start": "npx ts-node src/index.ts"
+    "dev": "npx nodemon src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.25",
     "cors": "^2.8.5",
+    "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
