--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true,
-    "target": "es6",
-    "moduleResolution": "node",
+    "target": "es2022",
+    "module": "node16",
+    "lib": ["es2022"],
+    "moduleResolution": "Node16",
+    "outDir": "dist",
     "sourceMap": true,
-    "outDir": "dist"
+    "esModuleInterop": true,
   },
-  "lib": ["es2015"]
 }
